# WhatToEat

./: .coderabbit.yaml  .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  codecov.yml  compose.prod.yaml  compose.yaml  deploy.sh  docker-compose.yml  project.config.json  project.private.config.json
.github/: dependabot.yml
.github/workflows/: ai-service-coverage.yml  backend-deploy.yml  ci.yml  codeql.yml  docker.yml  frontend-ci.yml  (+3 more)
ai-service/: .dockerignore  .env.example  Dockerfile  pyproject.toml
ai-service/app/: config.py  main.py  schemas.py
ai-service/app/api/: dependencies.py
ai-service/app/api/routes/: recommendation.py  tagging.py
ai-service/app/clients/: openai_compatible.py
ai-service/app/core/: config.py  exceptions.py
ai-service/app/domain/recommendation/: parser.py  prompts.py  service.py
ai-service/app/domain/tagging/: prompts.py  service.py
ai-service/app/infrastructure/llm/: client_factory.py  openai_compatible.py
ai-service/app/schemas/: recommendation.py  tagging.py
ai-service/app/services/: recommendation.py  tagging.py
ai-service/tests/: test_api_contracts.py  test_config.py  test_openai_compatible.py  test_services.py
backend/: .dockerignore  Dockerfile  pom.xml
docs/: ai-feature.md  api.md  api.yaml  architecture.md  backend.md  database.md  design-spec.md  frontend-ai-review-integration.md  frontend.md  security-review.md
frontend/: README.md  app.js  app.json  app.wxss  jest.config.cjs  package.json  project.config.json  project.private.config.json  快速开始.md
scripts/: update_coverage_badges.py
(+231 files in other folders)
