[project]
name = "whattoeat-ai-service"
version = "0.1.0"
description = "Internal AI service for restaurant tags and recommendation responses"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "openai>=1.79.0,<2.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
